--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -22,11 +22,11 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 300
     steps:
-      - uses: actions/setup-node@v4
+      - uses: node
       with:
         node-version: 20
 
- - uses: actions/setup-python@v5
+ - uses: python
       with:
         python-version: '3.11'
 
